--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <p>My First Program</p>
     <p>Ekhane alada add krlam</p>
     <h2>Valo</h2>
-    <p>Bangladesh add korechi</p>
+    <p>Bangladesh  korechi</p>
 </html>
